--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,52 +1,80 @@
 cmake_minimum_required(VERSION 3.0)
 project(USVControl VERSION 1.0)
 
-# Buscar paquetes necesarios
-find_package(OpenCV REQUIRED)
 
-# set c++ standard
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED true)
-
 set(FUZZYLITE_PATH "/home/piero/Documents/Libs/fuzzylite/fuzzylite")
 
-# Agregar la integración de ncnn
+
 set(ncnn_DIR "/home/piero/Documents/Libs/ncnn/build/install/lib/cmake/ncnn" CACHE PATH "/home/piero/Documents/Libs/ncnn/build/install/lib/cmake/ncnn/ncnnConfig.cmake")
 find_package(ncnn REQUIRED)
-
-# Agrega el directorio de FuzzyLite a la lista de directorios de inclusión
-include_directories(${FUZZYLITE_PATH})
-
-# Incluir NCNN
-include_directories(include/ncnn ${OpenCV_INCLUDE_DIRS} ${ncnn_INCLUDE_DIRS})
-
+find_package(OpenCV REQUIRED)
 find_package(Boost REQUIRED COMPONENTS system thread)
-include_directories(${Boost_INCLUDE_DIRS})
 
 
+include_directories(${OpenCV_INCLUDE_DIRS} ${ncnn_INCLUDE_DIRS} ${FUZZYLITE_PATH} ${Boost_INCLUDE_DIRS})
 
-# Agrega la biblioteca FuzzyLite a tu proyecto
+
 add_library(fuzzylite SHARED IMPORTED)
 set_target_properties(fuzzylite PROPERTIES IMPORTED_LOCATION "${FUZZYLITE_PATH}/debug/bin/libfuzzylite-debug.so")
+
+
+include_directories(
+  ${CMAKE_CURRENT_SOURCE_DIR}/ldlidar_driver/include/core/
+  ${CMAKE_CURRENT_SOURCE_DIR}/ldlidar_driver/include/dataprocess/
+  ${CMAKE_CURRENT_SOURCE_DIR}/ldlidar_driver/include/filter/
+  ${CMAKE_CURRENT_SOURCE_DIR}/ldlidar_driver/include/logger/
+  ${CMAKE_CURRENT_SOURCE_DIR}/ldlidar_driver/include/networkcom/
+  ${CMAKE_CURRENT_SOURCE_DIR}/ldlidar_driver/include/serialcom/
+)
+
+file(GLOB  LDLIDAR_DRI_CORE ${CMAKE_CURRENT_SOURCE_DIR}/ldlidar_driver/src/core/*.cpp)
+file(GLOB  LDLIDAR_DRI_DATARPC ${CMAKE_CURRENT_SOURCE_DIR}/ldlidar_driver/src/dataprocess/*.cpp)
+file(GLOB  LDLIDAR_DRI_FILTER ${CMAKE_CURRENT_SOURCE_DIR}/ldlidar_driver/src/filter/*.cpp)
+file(GLOB  LDLIDAR_DRI_LOGGER ${CMAKE_CURRENT_SOURCE_DIR}/ldlidar_driver/src/logger/*.cpp)
+file(GLOB  LDLIDAR_DRI_NETWORK ${CMAKE_CURRENT_SOURCE_DIR}/ldlidar_driver/src/networkcom/*.cpp)
+file(GLOB  LDLIDAR_DRI_SERIAL ${CMAKE_CURRENT_SOURCE_DIR}/ldlidar_driver/src/serialcom/*.cpp)
+
 
 file(GLOB_RECURSE SOURCES "src/*.cpp")
 file(GLOB_RECURSE HEADERS "include/*.hpp" "include/controllers/*.hpp")
 
 add_executable(${PROJECT_NAME} ${SOURCES} ${HEADERS})
 
+
 target_include_directories(${PROJECT_NAME} PRIVATE include)
+
+
+add_library(ldlidar_driver_static STATIC 
+  ${LDLIDAR_DRI_CORE} 
+  ${LDLIDAR_DRI_DATARPC} 
+  ${LDLIDAR_DRI_FILTER} 
+  ${LDLIDAR_DRI_LOGGER} 
+  ${LDLIDAR_DRI_NETWORK} 
+  ${LDLIDAR_DRI_SERIAL}
+)
+
+set_target_properties (ldlidar_driver_static PROPERTIES OUTPUT_NAME "ldlidar_driver")
 
 target_link_libraries(
     ${PROJECT_NAME} PUBLIC
-    fuzzylite
     ${OpenCV_LIBS}
     ${Boost_LIBRARIES}
-    ncnn)
+    fuzzylite
+    ncnn
+    ldlidar_driver_static)
 
 # Habilitar OpenMP si estás utilizando -fopenmp en el script original
 find_package(OpenMP)
-
 if(OpenMP_CXX_FOUND)
     target_link_libraries(${PROJECT_NAME} PRIVATE OpenMP::OpenMP_CXX)
 endif()
 
+INSTALL(TARGETS ldlidar_driver_static
+  ARCHIVE DESTINATION lib/ldlidar_driver
+)
+
+INSTALL(DIRECTORY ${PROJECT_SOURCE_DIR}/ldlidar_driver/include
+  DESTINATION include/ldlidar_driver
+)
