--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -1,3 +1,4 @@
 add_library(serial_lib serialib/serialib.cpp)
+add_library(filter_fir filter/filt.cpp)
 
 target_include_directories(serial_lib PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
